--- a/01_datastructure.ipynb
+++ b/01_datastructure.ipynb
@@ -3,7 +3,13 @@
   {
    "cell_type": "markdown",
    "id": "0a2c02b7-3211-4f7f-a3fc-8a3242177da3",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "# Series\n",
     "\n",
