--- a/02_file_load_save.ipynb
+++ b/02_file_load_save.ipynb
@@ -429,7 +429,13 @@
   {
    "cell_type": "markdown",
    "id": "62828d91-9235-4b78-ac12-6fe76a56c202",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "## csv\n",
     "- 저장할떄는 to, 불러올때는 read"
