--- a/00.numpy.ipynb
+++ b/00.numpy.ipynb
@@ -4,7 +4,13 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "71808ee7-29a6-48d4-b33d-922259300284",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import numpy as np \n",
@@ -704,7 +710,9 @@
    "cell_type": "code",
    "execution_count": 111,
    "id": "3efdf6ec-53dc-431e-8fe0-25a7aebabcf2",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -786,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 195,
    "id": "9c221eeb-9797-4dfb-8685-146a60ef6a18",
    "metadata": {},
    "outputs": [
@@ -796,7 +804,7 @@
        "array(['min'], dtype='<U8')"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -807,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 194,
    "id": "f3d4ee75-5749-4d7b-a7eb-2a53ed4ea89a",
    "metadata": {},
    "outputs": [
@@ -818,13 +826,13 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[192], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mdata\u001b[49m\u001b[43m[\u001b[49m\u001b[43mnames\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m==\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43myerin\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\n",
+      "Cell \u001b[1;32mIn[194], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mdata\u001b[49m\u001b[43m[\u001b[49m\u001b[43mnames\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m==\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43myerin\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\n",
       "\u001b[1;31mIndexError\u001b[0m: too many indices for array: array is 1-dimensional, but 2 were indexed"
      ]
     }
    ],
    "source": [
-    "data[names == 'yerin', 1]"
+    "data[names == 'yerin']"
    ]
   },
   {
