--- a/04_statistics.ipynb
+++ b/04_statistics.ipynb
@@ -970,7 +970,13 @@
    "cell_type": "code",
    "execution_count": 91,
    "id": "936102c9-db4b-4367-9d0a-5e2636d74d35",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
