--- a/05_missing_value.ipynb
+++ b/05_missing_value.ipynb
@@ -405,7 +405,13 @@
   {
    "cell_type": "markdown",
    "id": "e4e85300-a0cc-4400-b329-c963d72b9374",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "## 결측치\n",
     "1. 결측 데이터 **확인**\n",
@@ -539,6 +545,38 @@
    "metadata": {},
    "source": [
     "## 결측 데이터 필터링"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "id": "6aa4a71e-176a-4426-b8b3-087015708fc7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      False\n",
+       "1      False\n",
+       "2      False\n",
+       "3      False\n",
+       "4      False\n",
+       "       ...  \n",
+       "886    False\n",
+       "887    False\n",
+       "888    False\n",
+       "889    False\n",
+       "890    False\n",
+       "Name: age, Length: 891, dtype: bool"
+      ]
+     },
+     "execution_count": 149,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_copy['age'].isnull()"
    ]
   },
   {
@@ -739,7 +777,13 @@
    "cell_type": "code",
    "execution_count": 46,
    "id": "95039b59-6417-4a15-863d-7a8fa7b51fff",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -1258,7 +1302,13 @@
    "cell_type": "code",
    "execution_count": 81,
    "id": "d7b2c819-a358-4fad-bd37-0d4b75ccc550",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1490,7 +1540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 143,
    "id": "f5168d9f-2db7-418b-b81a-68116dcda40c",
    "metadata": {},
    "outputs": [],
@@ -1500,7 +1550,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 148,
+   "id": "2883269b-2ba3-4b65-8b5d-fbeef9adaa3b",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "cond1 = df_copy['sex'] == 'male'\n",
+    "# 남자 승객만 모으기\n",
+    "df_copy.loc[cond1, 'age'] # 남자 승객인 행에서 age열만 가져오기\n",
+    "man_mean = df_copy.loc[cond1, 'age'].mean()  # 평균 내기\n",
+    "df_copy.loc[cond1, 'age'] = df_copy.loc[cond1, 'age'].fillna(man_mean) # 남자 승객의 나이"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
    "id": "cef189d5-c3de-4cca-b24c-53f42ba9737d",
    "metadata": {
     "editable": true,
@@ -1509,22 +1579,14 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "30.726644591611475\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 남자 승객의 결측치 모으기\n",
     "# 우선 남자 승객의 정보만 모으기\n",
     "\n",
-    "cond1 = df_copy['sex'] == 'male' \n",
-    "male_mean = df_copy.loc[cond1, 'age'].mean()\n",
-    "print(male_mean)\n",
+    "# cond1 = df_copy['sex'] == 'male' \n",
+    "# male_mean = df_copy.loc[cond1, 'age'].mean()\n",
+    "# print(male_mean)\n",
     "\n",
     "# df_man = df_copy[cond1]\n",
     "# df_man.isnull().sum()\n",
@@ -1540,54 +1602,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 144,
    "id": "dbf09ce8-e148-47dd-8eb5-a8e57377746e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "27.915708812260537\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "cond2 = df_copy['sex'] == 'female'\n",
-    "female_mean = df_copy.loc[cond2, 'age'].mean()\n",
-    "print(female_mean)"
+    "# cond2 = df_copy['sex'] == 'female'\n",
+    "# female_mean = df_copy.loc[cond2, 'age'].mean()\n",
+    "# print(female_mean)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 145,
    "id": "62bdac91-fb4c-414d-88a1-035254551cde",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_copy.loc[cond1, 'age'] = df_copy.loc[cond1, 'age'].fillna(male_mean)\n",
-    "df_copy.loc[cond2, 'age'] = df_copy.loc[cond2, 'age'].fillna(female_mean)"
+    "# df_copy.loc[cond1, 'age'] = df_copy.loc[cond1, 'age'].fillna(male_mean)\n",
+    "# df_copy.loc[cond2, 'age'] = df_copy.loc[cond2, 'age'].fillna(female_mean)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 146,
    "id": "eea10dae-9a96-455f-9dc5-beb39e1f1bd2",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "np.float64(29.736034227171306)"
-      ]
-     },
-     "execution_count": 130,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df_copy['age'].mean()"
+    "# df_copy['age'].mean()"
    ]
   },
   {
