--- a/03_query.ipynb
+++ b/03_query.ipynb
@@ -30,12 +30,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "4bcf04a6-fe66-48e8-b98d-2a5491deaa1a",
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1731,7 +1726,13 @@
    "cell_type": "code",
    "execution_count": 71,
    "id": "07ccaf24-c521-4329-9c4a-09bdd2cbcfec",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -2065,7 +2066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 203,
    "id": "1246775a-8ecf-475a-bac0-3133a8039dfd",
    "metadata": {},
    "outputs": [
@@ -2109,83 +2110,11 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>630</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>male</td>\n",
-       "      <td>80.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>30.0000</td>\n",
-       "      <td>S</td>\n",
-       "      <td>First</td>\n",
-       "      <td>man</td>\n",
-       "      <td>True</td>\n",
-       "      <td>A</td>\n",
-       "      <td>Southampton</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>851</th>\n",
+       "      <th>890</th>\n",
        "      <td>0</td>\n",
        "      <td>3</td>\n",
        "      <td>male</td>\n",
-       "      <td>74.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7.7750</td>\n",
-       "      <td>S</td>\n",
-       "      <td>Third</td>\n",
-       "      <td>man</td>\n",
-       "      <td>True</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Southampton</td>\n",
-       "      <td>no</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>493</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>male</td>\n",
-       "      <td>71.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>49.5042</td>\n",
-       "      <td>C</td>\n",
-       "      <td>First</td>\n",
-       "      <td>man</td>\n",
-       "      <td>True</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Cherbourg</td>\n",
-       "      <td>no</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>96</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>male</td>\n",
-       "      <td>71.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>34.6542</td>\n",
-       "      <td>C</td>\n",
-       "      <td>First</td>\n",
-       "      <td>man</td>\n",
-       "      <td>True</td>\n",
-       "      <td>A</td>\n",
-       "      <td>Cherbourg</td>\n",
-       "      <td>no</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>116</th>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>male</td>\n",
-       "      <td>70.5</td>\n",
+       "      <td>100.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>7.7500</td>\n",
@@ -2198,27 +2127,99 @@
        "      <td>no</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>male</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.2500</td>\n",
+       "      <td>S</td>\n",
+       "      <td>Third</td>\n",
+       "      <td>man</td>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>no</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>889</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>male</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30.0000</td>\n",
+       "      <td>C</td>\n",
+       "      <td>First</td>\n",
+       "      <td>man</td>\n",
+       "      <td>True</td>\n",
+       "      <td>C</td>\n",
+       "      <td>Cherbourg</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>870</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>male</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.8958</td>\n",
+       "      <td>S</td>\n",
+       "      <td>Third</td>\n",
+       "      <td>man</td>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>no</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>868</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>male</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9.5000</td>\n",
+       "      <td>S</td>\n",
+       "      <td>Third</td>\n",
+       "      <td>man</td>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>no</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     survived  pclass   sex   age  sibsp  parch     fare embarked  class  who  \\\n",
-       "630         1       1  male  80.0      0      0  30.0000        S  First  man   \n",
-       "851         0       3  male  74.0      0      0   7.7750        S  Third  man   \n",
-       "493         0       1  male  71.0      0      0  49.5042        C  First  man   \n",
-       "96          0       1  male  71.0      0      0  34.6542        C  First  man   \n",
-       "116         0       3  male  70.5      0      0   7.7500        Q  Third  man   \n",
+       "     survived  pclass   sex    age  sibsp  parch     fare embarked  class  \\\n",
+       "890         0       3  male  100.0      0      0   7.7500        Q  Third   \n",
+       "0           0       3  male  100.0      1      0   7.2500        S  Third   \n",
+       "889         1       1  male  100.0      0      0  30.0000        C  First   \n",
+       "870         0       3  male  100.0      0      0   7.8958        S  Third   \n",
+       "868         0       3  male  100.0      0      0   9.5000        S  Third   \n",
        "\n",
-       "     adult_male deck  embark_town alive  alone  \n",
-       "630        True    A  Southampton   yes   True  \n",
-       "851        True  NaN  Southampton    no   True  \n",
-       "493        True  NaN    Cherbourg    no   True  \n",
-       "96         True    A    Cherbourg    no   True  \n",
-       "116        True  NaN   Queenstown    no   True  "
+       "     who  adult_male deck  embark_town alive  alone  \n",
+       "890  man        True  NaN   Queenstown    no   True  \n",
+       "0    man        True  NaN  Southampton    no  False  \n",
+       "889  man        True    C    Cherbourg   yes   True  \n",
+       "870  man        True  NaN  Southampton    no   True  \n",
+       "868  man        True  NaN  Southampton    no   True  "
       ]
      },
-     "execution_count": 77,
+     "execution_count": 203,
      "metadata": {},
      "output_type": "execute_result"
     }
