--- a/01_datastructure.ipynb
+++ b/01_datastructure.ipynb
@@ -859,6 +859,12 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c28a7669-b877-47bc-aeb8-e3b862aa132c",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 109,
    "id": "e1f8328f-83ca-4674-a9ca-ff8fa9b48820",
@@ -1007,8 +1013,7 @@
     "    [1, 2, 3],\n",
     "    [4, 5, 6],\n",
     "    [7, 8, 9]\n",
-    "], columns=['가', '나','다'])\n",
-    "d"
+    "], columns=['가', '나','다'])\n"
    ]
   },
   {
