--- a/03_query.ipynb
+++ b/03_query.ipynb
@@ -30,7 +30,12 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "4bcf04a6-fe66-48e8-b98d-2a5491deaa1a",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
